Исправлен путь к файлу raphael.js. Предыдущий коммит неправильный.

--- a/build.xml
+++ b/build.xml
@@ -12,7 +12,7 @@
 				<file name="utility.js" />
 				<file name="friends.js" />
 			</sources>
-			<sources dir="${basedir}/js">
+			<sources dir="${basedir}/raphael">
 				<file name="raphael.js" />
 			</sources>
 		</jscomp>
