--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "raphael"]
 	path = raphael
-	url = https://github.com/DmitryBaranovskiy/raphael.git
+	url = https://github.com/egor1984/raphael.git
